--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ body {
 /* Welcome section */
 
 .welcome-section {
-  padding-top: 80px;
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   height: 100vh;
   text-align: center;
 }
 
 .welcome-section h1 {
+  padding-top: 200px; /* нужно сместить текст в середину*/
   color: white;
   font-size: 4.7rem;
 }
