--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .nav {
   display: flex;
-  height: 80px;
+  height: 65px;
   width: 100%;
   justify-content: space-between;
   background-color: #be3144;
@@ -34,15 +34,15 @@ body {
   list-style: none;
 }
 
-.nav-list li {
-  
-  padding: 0 20px;
-  font-size: 1.6rem;
-}
-
 .nav-list a {
+  font-size: 1.6rem;
   text-decoration: none;
   color: white;
+  padding: 15px 30px;
+}
+
+.nav-list a:hover {
+  background-color: #45567d;
 }
 
 
@@ -84,12 +84,42 @@ body {
   max-width: 640px;
   margin: 0 auto;
   text-align: center;
+  margin-bottom: 30px;
 }
 
-.projects-grid {
-  display: grid;
+.projects-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  justify-content: center;
 }
 
+.project {
+  width: 450px;
+  height: 480px;
+  margin: 30px 20px;
+  text-decoration: none;
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+
+.project-image {
+  width: 100%;
+  height: 430px;
+  object-fit: cover;
+  display: block;
+}
+
+.project-title {
+  height: 50px;
+  text-align: center;
+  background-color: #303841;
+  display: block;
+  color: #f0f0f0;
+  font-size: 1.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Contact */
 
@@ -119,10 +149,10 @@ body {
 
 .contact-links {
   margin-top: 100px;
-}
-
-.contact-links ul {
+  flex-wrap: wrap;
   display: flex;
+  justify-content: space-between;
+  justify-content: center;
 }
 
 .contact-links a {
@@ -130,6 +160,11 @@ body {
   text-decoration: none;
   padding: 20px 40px;
   font-size: 1.8rem;
+}
+
+.contact-links a:hover {
+  position: relative;
+  top: 10px;
 }
 
 
@@ -146,4 +181,25 @@ footer {
 
 footer p {
   margin: 20px;
+}
+
+@media screen and (max-width: 550px) {
+  .nav {
+    flex-direction: column;
+    height: 96px;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .nav-list {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .nav-list a {
+    font-size: 1.3rem;
+  }
 }
