--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 .welcome-section {
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   height: 100vh;
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -74,6 +75,7 @@ body {
 .projects-section {
   background-color: #45567d;
   padding: 60px 40px;
+  width: 100%;
 }
 
 .projects-section-header {
@@ -124,6 +126,7 @@ body {
 /* Contact */
 
 .contact-section {
+  width: 100%;
   background-color: #303841;
   display: flex;
   flex-direction: column;
@@ -171,6 +174,7 @@ body {
 /* Footer */
 
 footer {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   border-top: 5px solid #be3144;
